--- a/screenshot-Su/screenshot-Su/screenshot-Su.csproj
+++ b/screenshot-Su/screenshot-Su/screenshot-Su.csproj
@@ -52,11 +52,21 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="KeyboardHook.cs" />
     <Compile Include="MouseHook.cs" />
+    <Compile Include="PointerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PointerForm.Designer.cs">
+      <DependentUpon>PointerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PointerForm.resx">
+      <DependentUpon>PointerForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
